[package]
name = "hello"
version = "0.1.0"
edition = "2018"

[dependencies]
glow = { path = "../../" }

[target.'cfg(not(any(target_family = "wasm")))'.dependencies]
glutin = { version = "0.28", optional = true }
sdl2 = { version = "0.35", optional = true }

[target.'cfg(target_family = "wasm")'.dependencies]
web-sys = { version = "0.3", features=["HtmlCanvasElement", "WebGl2RenderingContext", "Window"] }
wasm-bindgen = { version = "0.2" }
